minor comment corrections

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
     <head>
         <!-- JQUERY CDN -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <!-- SERVER INTERACTION FUNCTIONS -->
+        <!-- CLIENT SIDE TO SERVER INTERACTION FUNCTIONS -->
         <script src="CS-interaction-functions.js" type="text/javascript"></script>
     </head>
     
