add deadline timer

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
         <br>
         <br>
         <h1 id="countdown_time"></h1>
+        <br>
+        <button onclick="reduce_reduce_deadline()">REDUCE</button>
+        <h1 id="deadline"></h1>
+        
         
     </body>
 </html>
