saver now save poll

--- a/public/index.html
+++ b/public/index.html
@@ -27,12 +27,12 @@
         <br>
         <input id="username" value="levelgigio"><br>
         <input id="pwd" type="password" value="123456"><br>
-        <button onclick="login()">LOGIN</button>
+        <button id="login">LOGIN</button>
         <br>
         <br>
         <h1 id="countdown_time"></h1>
         <br>
-        <button onclick="reduce_deadline()">REDUCE</button>
+        <button id="reduce_deadline">REDUCE</button>
         <h1 id="deadline"></h1>
         
     </body>
