--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
         <br>
         <button id="reduce_deadline">REDUCE</button>
         <h1 id="deadline"></h1>
+        <br>
+        <button id="split_pp">SPLIT</button>
         
     </body>
 </html>
