--- a/public/game.html
+++ b/public/game.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <!-- CHART.JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
         <!-- JQUERY CDN -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
@@ -56,6 +58,7 @@
         <p id="deadline"></p>
         <br>
         <button id="split_pp">SPLIT</button>
+        <canvas id="myChart"></canvas>
 
     </body>
 </html>
