--- a/public/game.html
+++ b/public/game.html
@@ -1,64 +1,79 @@
 <html>
     <head>
-        <!-- CHART.JS -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+        <!-- SOCKET.IO CDN -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
         <!-- JQUERY CDN -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-        <!-- SOCKET.IO CDN -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js"></script>
+        <!-- BOOTSTRAP -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <!-- FONT AWESOME -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+        <!-- CHART.JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
+
         <!-- CLIENT SIDE TO SERVER INTERACTION FUNCTIONS -->
         <script src="client_to_server.js" type="text/javascript"></script>
         <!-- CLIENT SIDE ONLY FUNCTIONS-->
         <script src="nave.js" type="text/javascript"></script>
         <script src="horse_json.js"></script>
-        <!-- <link rel="stylesheet" href="style.css"> -->
+        <link rel="stylesheet" href="game_style.css">
     </head>
 
     <body>
-        ALTITUDE: <p id="altitude-nave"></p>
-
-        <div id="animation">
-            <div class="spaceship">
-                <div class="antenna"></div>
-                <div class="body"></div>
-                <div class="window"></div>
-                <div class="fins"></div>
-                <div class="rocket"></div>
-                <div class="fireWrapper">
-                    <div class="fire">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+        <div class="jumbotron">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div>
+                        <p class="d-inline">IP: </p><p class="d-inline" id="user_ip"></p>
+                        <br>
+                        <p class="d-inline">IP SPENT: </p><p class="d-inline" id="user_ip_spent"></p>
+                        <br>
+                        <p class="d-inline">PP: </p><p class="d-inline" id="user_pp"></p>
+                        <br>
+                        <p class="d-inline">PP SPENT: </p><p class="d-inline" id="user_pp_spent"></p>
+                        <br>
+                        <button class="btn-dark btn btn-sm" id="split_pp" type="button">SPLIT</button>
+                        <button class="btn-dark btn btn-sm" id="split_pp" type="button">COMPRAR+</button>
                     </div>
+
+                </div>
+                <div class="col-lg-4 text-center">
+                    <p id="countdown_time"></p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    PRIZE POT: $<p id="prize-pot"></p>
+                </div>
+            </div>
+            <div class="row my-lg-5 mx-lg-auto">
+                <div>
+                    <img id="horse">
+                </div>
+                <p class="d-inline">ALTITUDE: </p><p class="d-inline" id="altitude-nave"></p>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 my-lg-auto">
+                    <button class="d-inline btn btn-md btn-dark" id="reduce_deadline"><i class="fas fa-hourglass-half"></i></button>
+                    <p class="d-inline" id="deadline"></p>
+                </div>
+                <div class="col-lg-6 my-lg-auto">
+                    <div class="chartWrapper">
+                        <div class="chartAreaWrapper">
+                            <canvas id="canvas" height="75"></canvas>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-1 my-lg-auto">
+                    <p id="pool_subir"></p>
+                    <button class="btn btn-md btn-dark" id="vote_subir">SUBIR</button>
+                </div>
+                <div class="col-lg-1 my-lg-auto">
+                    <p id="pool_descer"></p>
+                    <button class="btn btn-md btn-dark" id="vote_descer">DESCER</button>
                 </div>
             </div>
         </div>
-
-
-        <div>
-            <img id="horse">
-        </div>
-        <br>
-        <p id="pool_subir"></p><p id="pool_descer"></p>
-        <button id="vote_subir">SUBIR</button>
-        <button id="vote_descer">DESCER</button>
-        <input type="range" min="1" max="10" value="1" id="ip_spent">
-        <br>
-        <br>
-        USER IP: <p id="user_ip"></p>
-        <br>
-        <br>
-        <p id="countdown_time"></p>
-        <br>
-        <button id="reduce_deadline">REDUCE</button>
-        <p id="deadline"></p>
-        <br>
-        <button id="split_pp">SPLIT</button>
-        <canvas id="myChart"></canvas>
-
     </body>
 </html>
