--- a/public/game.html
+++ b/public/game.html
@@ -36,7 +36,7 @@
                         <p class="d-inline">PP SPENT: </p><p class="d-inline" id="user_pp_spent"></p>
                         <br>
                         <button class="btn-dark btn btn-sm" id="split_pp" type="button">SPLIT</button>
-                        <button class="btn-dark btn btn-sm" id="split_pp" type="button">COMPRAR+</button>
+                        <button class="btn-dark btn btn-sm" id="buy_pp" type="button">COMPRAR+</button>
                     </div>
 
                 </div>
@@ -44,7 +44,7 @@
                     <p id="countdown_time"></p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    PRIZE POT: $<p id="prize-pot"></p>
+                   <p class="d-inline">PRIZE POT: $</p><p class="d-inline" id="prize_pot"></p>
                 </div>
             </div>
             <div class="row my-lg-5 mx-lg-auto">
