--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,17 @@
 <html>
     <head>
+        <!-- BOOTSTRAP -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <!-- FONT AWESOME -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+        <!-- GOOGLE -->
+        <meta name="google-signin-scope" content="profile email">
+        <meta name="google-signin-client_id" content="1005700104533-80n6ehcpsitboi72mkvs35phhh7pv0ip.apps.googleusercontent.com">
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
         <!-- JQUERY CDN -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-        <!-- SOCKET.IO CDN -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js"></script>
         <!-- CLIENT SIDE TO SERVER INTERACTION FUNCTIONS -->
         <script src="client_login.js" type="text/javascript"></script>
         <!-- CLIENT SIDE ONLY FUNCTIONS-->
@@ -12,10 +19,18 @@
         <script src="horse_json.js"></script>
         <!-- <link rel="stylesheet" href="style.css"> -->
     </head>
-    
+
     <body>
-        <input id="username" value="levelgigio"><br>
-        <input id="pwd" type="password" value="123456"><br>
-        <button id="login">LOGIN</button>
+        <div class="jumbotron">
+            <div class="row">
+                <div class="col-12" align="center">
+                    <h1>PRIZESHIP.IO <i class="fas fa-space-shuttle"></i></h1>
+                    <p>Por Giovanni Forastieri.</p>
+                </div>
+                <div class="col-12 my-5" align="center">
+                    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark" align="center"></div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
