add guessing to game

--- a/public/game.html
+++ b/public/game.html
@@ -25,7 +25,7 @@
     <body>
         <div class="jumbotron">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-2">
                     <div>
                         <p class="d-inline">IP: </p><p class="d-inline" id="user_ip"></p>
                         <br>
@@ -40,11 +40,18 @@
                     </div>
 
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-3">
+                    <div id="guesses">
+                        
+                        
+                    </div>
+                </div>
+
+                <div class="col-lg-3 text-center">
                     <p id="countdown_time"></p>
                 </div>
                 <div class="col-lg-4 text-center">
-                   <p class="d-inline">PRIZE POT: $</p><p class="d-inline" id="prize_pot"></p>
+                    <p class="d-inline">PRIZE POT: $</p><p class="d-inline" id="prize_pot"></p>
                 </div>
             </div>
             <div class="row my-lg-5 mx-lg-auto">
